# recursive-routing-racer

./: .gitignore  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
engine/: __init__.py  cli.py  dispatcher.py  executor.py  hdc_benchmark.py  hdc_scheduler.py  musicgen_tri.py  npu_belt.py  npu_scheduler.py  onnx_dispatcher.py  ops.py  personality.py  stress_test.py  tri_inference.py
tests/: conftest.py  test_monitor.py  test_personality.py  test_pulse.py
